--- a/model_mat.rmd
+++ b/model_mat.rmd
@@ -16,13 +16,21 @@ The three cases are the following:
 - Random Effect Matrices (Z)
 
 I (like 50% (more like 99.9% humans)) like to assume I know what I am doing and stick a dataset in a blackbox, press a button and close my eyes and hope the blackbox can read my mind or do something smart/sensible. 
-The blackbox usually does something reasonible and often _more correct_ than user have in mind because these are tools developed by very smart people. 
+Blackboxes usually does something reasonable and often _more correct_ than user have in mind because these are tools developed by very smart people. 
+
+Here is the part that bugs me how users don't appreicate how complicated these blackboxes are and take them for granted. 
+Developing software is hard and smart people spend many hours banging on their heads to create these software!
+As a young developers, it is dangerous to assume/ignore/breeze through the details.
+Mathematically speaking, everything is straight forward and never pay much attention to _model matrices_. 
+Here is a simple example of a very simple concept taught in an intro to stats course or experimental design course. 
 
 
 ## Interactions 
-... I am going to skip to the interaction problem. 
-This is a short example of what I mean it can get confusing and hairy. 
-Mathematically speaking, they are identical (p1 and p3, p2 and p4), but because the model frames are arrange in different ways, they look different. 
+
+This is a short example of what I mean model matrices can get confusing and hairy.
+Let's create a dataset of species in different sites and we are intested in _modelling_ the species-site, site-species interaction. 
+What does the model matrix look like?
+
 
 
 ```{r pkg, message=FALSE, warning=FALSE}
@@ -44,7 +52,9 @@ print(with(dd,fac2sparse(interaction(sp,site))))
 ```
 
 
-Now if I rearrange the model frame, I get a different view. 
+As you can see, it matters how you set it up. 
+Now let's rearrange the data and sort them differently.
+
 ```{r, echo=FALSE}
 print(dd2 <- dd %>% arrange(sp,site))
 
@@ -55,4 +65,10 @@ print(image(with(dd2,fac2sparse(interaction(sp,site)))))
 print(with(dd2,fac2sparse(interaction(sp,site))))
 
 ```
+
+Again, they look different _and_ from p1 and p2. 
+But they are _identical_ somehow.
+
+The point is, it gets very hairy when you try to do more complicated stuff like nested random effects with both main effects. 
+
 
